Fix alignment between destination/review pages

--- a/client/assets/header-style.css
+++ b/client/assets/header-style.css
@@ -1,13 +1,22 @@
+nav {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .navbar{
     width: 100%;
     position: fixed;
-    padding: 20px 0;
+    padding: 20px 0 20px 30px;
     display: flex;
     align-items: center;
 
     color:white;
     background-color: black;
     z-index: 1;
+}
+
+.logo {
+    font-size: 35px;
+    /*text-indent: 30px;*/
 }
 
 .navbar a{
@@ -38,4 +47,18 @@
 }
 .navbar ul li:hover::after{
     width:100%;
+}
+
+@media (max-width: 667px){
+    .imageContainer{
+        display: flex;
+        flex-direction: column;
+    }
+    .navbar ul li{
+        font-size: 13px;
+    }
+    .logo{
+        font-size: 30px;
+        margin-left: 5px;
+    }
 }
