--- a/client/assets/index-style.css
+++ b/client/assets/index-style.css
@@ -5,11 +5,6 @@ body {
    
 }
 
-.logo {
-    font-size: 35px;
-    text-indent: 30px;
-}
-
 .words {
     width: 90%;
     position: relative;
